# TP2_Algoritmos_y_programacion

./: CMakeLists.txt  Constantes.h  Contador.cpp  Contador.h  Creador.cpp  Creador.h  Matriz.cpp  Matriz.h  Menu.cpp  Menu.h  Objeto_generico.cpp  Objeto_generico.h  README.md  Ser.cpp  Ser.h  Vampiro.cpp  Vampiro.h  a.out  agua_bendita.cpp  agua_bendita.h  bala.cpp  bala.h  cruz.cpp  cruz.h  elemento.cpp  elemento.h  escopeta.cpp  escopeta.h  estaca.cpp  estaca.h  estado.txt  humano.cpp  humano.h  humanocv.cpp  humanocv.h  leer_y__procesar_archivo.cpp  leer_y__procesar_archivo.h  main_tp2.cpp  nosferatu.cpp  nosferatu.h  (+8 more)
