cmake_minimum_required(VERSION 3.19)
project(tp2_algo2)

set(CMAKE_CXX_STANDARD 14)

add_executable(tp2_algo2 main_tp2.cpp leer_y__procesar_archivo.cpp leer_y__procesar_archivo.h Objeto_generico.h Creador.cpp Creador.h Objeto_generico.cpp Constantes.h zombi.cpp zombi.h humano.cpp humano.h vampirella.cpp vampirella.h nosferatu.cpp nosferatu.h humanocv.cpp humanocv.h agua_bendita.cpp agua_bendita.h cruz.cpp cruz.h estaca.cpp estaca.h escopeta.cpp escopeta.h bala.cpp bala.h vanesa.cpp vanesa.h objetos.cpp objetos.h elemento.cpp elemento.h Ser.cpp Ser.h Vampiro.cpp Vampiro.h Matriz.cpp Matriz.h Contador.cpp Contador.h Menu.cpp Menu.h)